...
    <string name="drawer_close">sluit drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_subthema">SubthemaActivity</string>
    <string name="subthema">Subthema</string>
    <string name="token">token</string>
    <string name="gebruiker">gebruiker</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuleer</string>
    <string name="kandoe_circle">Kandoe Circle</string>
    <string name="email">E-mail adres</string>
    <string name="password_mismatch">De wachtwoorden verschillen van elkaar</string>
...
    <string name="cirkelsessies">Cirkelsessies</string>
    <string name="mijn_hoofdthemas">Mijn hoofdthema\'s</string>
    <string name="mijn_deelnames">Mijn deelnames</string>
    <string name="mijn_organisaties">Mijn organisaties</string>
    <string name="help">Help</string>
    <string name="divider">Divider</string>
    <string name="afmelden">Afmelden</string>
    <string name="hoe_spelen_text">U neemt deel aan een sessie dat gestart is en voegt dan kaarten toe indien nodig. Als er al kaarten aanwezig zijn, dan moet u de kaart verplaatsen door erop te klikken. U moet hiervoor wel wachten, omdat men met beurten speelt. De kaart die op de cirkel nummer 1 staat wordt gebruikt als idee.</string>
    <string name="help_kaarten_text">Men kan kaarten aanmaken en hierop een idee schrijven, of bestaande kaarten gebruiken die door andere deelnemers werden aangemaakt verplaatsten.</string>
    <string name="help_cirkelsessie_text">Elke cirkelsessie heeft een status, namelijk; GESTART,OPEN,GESLOTEN en BEËINDIGD. Elke cirkel heeft een bepaalde grootte waarop kaarten worden geplaatst.</string>
    <string name="help_deelnemen_text">Deelnemen kan je alleen doen als de sessie OPEN staat.</string>
    <string name="title_activity_kaart">KaartActivity</string>
    <string name="spelkaart_gegevens">Spelkaart gegevens</string>
...
