<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="menu_item_array" >
        <item>Divider</item>
        <item>Mijn profiel</item>
        <item>Divider</item>
        <item>Cirkelsessies</item>
        <item>Divider</item>
        <item>Mijn deelnames</item>
        <item>Mijn organisaties</item>
        <item>Mijn hoofdthema\'s</item>
        <item>Mijn subthema\'s</item>
        <item>Divider</item>
        <item>Help</item>
    </string-array>
</resources>