<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".organisaties.OrganisatieLijstFragment"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/md_grey_300">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/organisatie_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/aantal"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/listview_organisaties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        />

    <TextView
        android:id="@+id/no_organisatie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geen_organisaties"
        android:visibility="gone"
        android:textSize="20sp"
        android:textStyle="bold">
    </TextView>

</LinearLayout>
